fix contrast colors

--- a/assets/css/memorygame.css
+++ b/assets/css/memorygame.css
@@ -8,7 +8,7 @@ main {
     height: 100vh;
     align-items: center;
     padding: 20px 20px 0 20px;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     justify-content: center;
     background-color: white;
 }
